--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,9 @@
     <string name="app_name">Stormy</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="error_title">Oops! Sorry!</string>
-    <string name="error_message">There was an error. Please try again.</string>
-    <string name="error_ok_button_text">OK</string>
+    <string name="error_title">Error</string>
+    <string name="http_request_failure">There was an error connecting.</string>
+    <string name="ok_uppercase">OK</string>
     <string name="network_unavailable_message">Network is unavailable!</string>
 
 </resources>
